[CES-9773] sms 1:1 PoC (#288)
